[DW-874] Fix to styling
- Table overflowing
- Emphas boxes overflowing

--- a/repository-data/webfiles/src/main/resources/site/scss/units/_table.scss
+++ b/repository-data/webfiles/src/main/resources/site/scss/units/_table.scss
@@ -51,6 +51,7 @@ table {
     }
 
     td {
+        word-break: break-word;
         border-bottom: 1px solid $col-15;
         border-left: 2px solid #FFFFFF;
 
